@@ -975,12 +975,12 @@
 							<visible>!Skin.HasSetting(HomeMenuNoTVShowButton)</visible>
 						</item>
 						<item>
-							<label>$LOCALIZE[42001]</label>
-							<onclick>PlayMedia("plugin://plugin.program.umod.launcher/?com=LAUNCH_STANDALONE&amp;catID=root_category&amp;launID=afdaf94d3699eff425d0bac45bee3d98")</onclick>
+							<label>$LOCALIZE[42012]</label>
+							<onclick>PlayMedia("plugin://plugin.program.umod.launcher/?com=LAUNCH_STANDALONE&amp;catID=root_category&amp;launID=4e2e839f24dd9da1731f6e411b508831")</onclick>
 							<property name="menu_id">$NUMBER[45000]</property>
-							<thumb>icons/sidemenu/netflix.png</thumb>
-							<property name="id">netflix</property>
-							<visible>!Skin.HasSetting(HomeMenuNoNetflixButton)</visible>
+							<thumb>icons/sidemenu/livetv.png</thumb>
+							<property name="id">liv</property>
+							<visible>!Skin.HasSetting(HomeMenuNoLIVButton)</visible>
 						</item>
 						<item>
 							<label>$LOCALIZE[42009]</label>
