@@ -1,5 +1,6 @@
 [COLOR blue][B]Skin Estuary uMod2[/B][/COLOR]
-[COLOR green][B]•3.1.6[/B] Widget Anime Removed.[/COLOR]
+[COLOR green][B]•3.1.7[/B] Minor change.[/COLOR]
+[COLOR yellow][B]•3.1.6[/B] Widget Anime Removed.[/COLOR]
 [COLOR yellow][B]•3.1.4[/B] Minor Change.[/COLOR]
 [COLOR yellow][B]•3.1.3[/B] Add MC category.[/COLOR]
 [COLOR yellow][B]•3.1.2[/B] Minor bug fix.[/COLOR]
